feat: 검증 및 NPE 관련 수정